package com.mashang.decorator.putaway;

public interface PutawayStrategy {
    String execute();
    int getPriority();
}
